--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "angular-socket-io": "~0.4.1",
     "bootstrap": "~3.1.1",
-    "requirejs": "~2.1.11"
+    "requirejs": "~2.1.11",
+    "angular-ui-router": "~0.2.10"
   }
 }
