[temp] add ngSantinize

--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
     "bootstrap": "~3.1.1",
     "requirejs": "~2.1.11",
     "angular-ui-router": "~0.2.10",
-    "angular-bootstrap": "~0.10.0"
+    "angular-bootstrap": "~0.10.0",
+    "angular-sanitize": "~1.2.16"
   }
 }
